===================================================================

General
-------

  o Added support for using a different configuration file at startup than the
    default casparcg.config by simply adding the name of the file to use as the
    first command line argument to casparcg.exe.
  o Fixed various bugs.

AMCP
----

  o Added RESUME command to complement PAUSE. (Peter Keuter)

HTML producer
-------------

  o No longer tries to play all files with a . in their name.
    (Georgi Chorbadzhiyski)
  o Reimplemented using CEF3 instead of Berkelium, which enables use of WebGL
    and more. CEF3 is actively maintained, which Berkelium is not. (Robert Nagy)
  o Implements a custom version of window.requestAnimationFrame which will
    follow the pace of the channel, for perfectly smooth animations.
  o No longer manually interlaces frames, to allow for mixer fill transforms
    without artifacts.
  o Now uses CEF3 event loop to avoid 100% CPU core usage.



CasparCG Server 2.0.7 Beta 2 (as compared to CasparCG Server 2.0.7 Beta 1)
==========================================================================

General
-------

  o Added sendings of OSC messages for channel_grid channel in addition to
    regular channels.

Producers
---------

  o FFmpeg: Reports correct nb_frames() when using SEEK (Thomas Kaltz III)
  o Flash: Fixed bug wherer CG PLAY, CG INVOKE

Consumers
---------

  o channel_consumer: Added support for more than one channel_consumer per
    channel.
  o decklink_consumer: Added support for a single instance of the consumer to
    manage a separate key output for use with decklink duo/quad cards:

    <decklink>
      <device>1</device>
      <key-device>2</key-device>
      <keyer>external_separate_device</keyer>
    </decklink>

    ...in the configuration will enable the feature. The value of <key-device />
    defaults to the value of <device /> + 1.
  o synchronizing_consumer: Removed in favour of a single decklink_consumer